--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.1.0
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.1.0
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
@@ -40,8 +41,8 @@ flutter:
     - assets/
     - lib/images/imagefirst.png
     - lib/images/imagesecond.png
-    - assets/
     - assets/images/
+    - assets/icons/
   fonts:
     - family: Baloo 2
       fonts:
