fix order detail

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   grouped_list: ^6.0.0
   bitsdojo_window: ^0.1.6
   google_fonts: ^6.2.1
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
