--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.4
   dvhcvn: ^2.1.20250301
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
@@ -134,6 +135,11 @@ flutter:
       fonts:
         - asset: assets/fonts/RobotoRomanMedium.ttf
           weight: 500
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
 
     - family: Baloo Paaji 2
       fonts:
