--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 
   flutter_image_compress: ^2.1.0
   image_picker: ^1.0.7
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
