--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,43 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"flutterdb-2df83","appId":"1:878164465702:android:cfbb0160360b832caf6ee7","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"flutterdb-2df83","configurations":{"android":"1:878164465702:android:cfbb0160360b832caf6ee7","ios":"1:878164465702:ios:8d7d96c2b3c8a841af6ee7","macos":"1:878164465702:ios:8d7d96c2b3c8a841af6ee7","web":"1:878164465702:web:ecc0e4ac61d06eb7af6ee7","windows":"1:878164465702:web:0c672fccc9435c20af6ee7"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "flutterdb-2df83",
+          "appId": "1:878164465702:android:cfbb0160360b832caf6ee7",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "flutterdb-2df83",
+          "configurations": {
+            "android": "1:878164465702:android:cfbb0160360b832caf6ee7",
+            "ios": "1:878164465702:ios:8d7d96c2b3c8a841af6ee7",
+            "macos": "1:878164465702:ios:8d7d96c2b3c8a841af6ee7",
+            "web": "1:878164465702:web:ecc0e4ac61d06eb7af6ee7",
+            "windows": "1:878164465702:web:0c672fccc9435c20af6ee7"
+          }
+        }
+      }
+    }
+  },
+  "firestore": {
+    "indexes": [
+      {
+        "collectionGroup": "products",
+        "queryScope": "COLLECTION",
+        "fields": [
+          {
+            "fieldPath": "category",
+            "order": "ASCENDING"
+          },
+          {
+            "fieldPath": "createdAt",
+            "order": "DESCENDING"
+          }
+        ]
+      }
+    ]
+  }
+}
