--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^12.4.5
   shared_preferences: ^2.5.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
