--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^12.4.5
   shared_preferences: ^2.5.3
   intl: ^0.19.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
