--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   flutter_swipe_action_cell: ^3.1.3
-
+  device_info_plus: ^11.4.0
+  web_socket_channel: ^3.0.3
   flutter_localizations:
     sdk: flutter
   cached_network_image: ^3.4.1
